package(default_visibility = ["//visibility:public"])

cc_library(
    name = "rtdiag",
    hdrs = [
        "types.h",
        "ring_buffer.h",
        "tracer.h",
        "analyzer.h",
        "sched_analyzer.h",
    ],
    include_prefix = "rtdiag",
    strip_include_prefix = "",
    deps = [],
)
